Fix Margin on Tablet

--- a/site/src/components/assets/scss/fragments/content-typo/_content-typo-phone.scss
+++ b/site/src/components/assets/scss/fragments/content-typo/_content-typo-phone.scss
@@ -10,6 +10,8 @@
 	.page-about{
 		top: 0!important;
 
+		main{ padding: 0;}
+
 
 		/// Typo Header hgroup
 		#article-contenu, 
